--- a/code/django_webapp/static/css/style.css
+++ b/code/django_webapp/static/css/style.css
@@ -13,3 +13,40 @@ h1 {
   font-weight: bold;
   margin: 0;
 }
+
+a {
+  color: gray;
+  text-decoration: none;
+  font-size: 14px;
+  margin: 15px 0;
+}
+
+.wrapper {
+  background: #fff;
+  border-radius: 15px;
+  box-shadow: 0 7px 50px #bdbdbd, 0 0 0 20px #ffffffeb;
+  position: relative;
+  overflow: hidden;
+  width: 768px;
+  max-width: 100%;
+  min-height: 480px;
+}
+
+.form-wrapper form {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  padding: 0 50px;
+  height: 100%;
+  justify-content: center;
+}
+
+.form-wrapper input {
+  background-color: #eee;
+  display: flex;
+  flex-direction: column;
+  border: none;
+  padding: 12px 15px;
+  margin: 8px 0;
+  width: 100%;
+}
