--- a/code/django_webapp/static/css/style.css
+++ b/code/django_webapp/static/css/style.css
@@ -66,3 +66,15 @@ button {
   color: #fff;
   background-color: #2196f3;
 }
+
+button:active {
+  transform: scale(0.95);
+  border-color: #000;
+  box-shadow: 0 0 20px 0 #000;
+  color: #fff;
+  background-color: #000;
+}
+
+button:focus {
+  outline: none
+}
