flash message added for registration pages

--- a/code/django_webapp/static/css/style.css
+++ b/code/django_webapp/static/css/style.css
@@ -126,3 +126,11 @@ button:focus {
 .overlay-right {
   right: 0;
 }
+
+#messages {
+  background-color: white;
+  color: black;
+  font-weight: bold;
+  padding: 10px;
+  border-radius: 15px;
+}
