--- a/code/django_webapp/users/templates/users/tutor_register.html
+++ b/code/django_webapp/users/templates/users/tutor_register.html
@@ -17,6 +17,9 @@
         <div class="overlay">
           <div class="overlay-panel overlay-right">
             <h1>Tutor Register</h1>
+            {%for message in messages%}
+              <p>{{message}}</p>
+            {%endfor%}
           </div>
         </div>
       </div>
