--- a/code/django_webapp/users/templates/users/login.html
+++ b/code/django_webapp/users/templates/users/login.html
@@ -1,1 +1,33 @@
-<h1>Login</h1>
+{% extends "users/base.html" %}
+{% block content %}
+    <div class="wrapper" id="wrapper">
+      <div class="form-wrapper sign-up-wrapper">
+        <form method="POST" action="">
+            {%csrf_token%}
+            <label>Username<label>
+            <input type="text" name="username">
+
+            <label>Password<label>
+            <input type="password" name="password">
+          <button type="submit" name="Log in">Log in</button>
+
+          <p>Don't have an account?</p>
+          <a href="{% url 'student-register' %}">Register as a student</a>
+          <br></br>
+          <a href="{% url 'tutor-register' %}">Register as a tutor</a>
+
+        </form>
+      </div>
+
+      <div class="overlay-wrapper">
+        <div class="overlay">
+          <div class="overlay-panel overlay-right">
+            <h1>Login</h1>
+            {%for message in messages%}
+              <p>{{message}}</p>
+            {%endfor%}
+          </div>
+        </div>
+      </div>
+    </div>
+{% endblock content %}
