--- a/code/django_webapp/static/css/style.css
+++ b/code/django_webapp/static/css/style.css
@@ -9,6 +9,48 @@ body {
   margin: -20px 0 50px;
 }
 
+.banner{
+  width: 100%;
+  height: 1000vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(../images/Home_page.jpg);
+  background-size: 100% 100%;
+  background-position: center;
+}
+
+.navbar{
+  width: 85%;
+  margin: 0px 35px 0px 35px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo{
+  width: 180px;
+  cursor: pointer;
+  border: 75px;
+}
+
+.navbar ul li{
+  list-style: none;
+  display: inline-block;
+  margin: 0 20px;
+  position: relative;
+}
+
+}
+.navbar ul li a{
+  text-decoration: none;
+  color #fff;
+  text-transform: uppercase;
+}
+
+.navbar ul li::after{
+  content: '';
+  height: 3px;
+  width: 100%;
+}
+
 h1 {
   font-weight: bold;
   margin: 0;
