--- a/code/django_webapp/home/templates/home/home.html
+++ b/code/django_webapp/home/templates/home/home.html
@@ -1,5 +1,39 @@
-{% extends "users/base.html" %}
-{% block content %}
+<!DOCTYPE html>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link rel="stylesheet" href="{% static '/css/home_style.css'%}">
 
+    {% if title %}
+      <title>TutorO - {{title}}</title>
+    {% else %}
+      <title>TutorO</title>
+    {% endif %}
+    <div class="banner">
+        <div class="navbar">
+          <img src="../../static/images/TutorO Logo.png" class="logo">
+          <ul>
+              <li><a href="#">Contact us</a></li>
+              <li><a href="#">Sign in</a></li>
+          </ul>
+        </div>
 
-{% endblock content %}
+      <div class="home_content">
+          <h1> Welcome to TutorO</h1>
+          <p> Are you a student or a Tutor? </p>
+          <div>
+                <button type="button"><span></span>I'm a Student</button>
+                <button type="button"><span></span>I'm a Tutor</button>
+          </div>
+      </div>
+    </div>
+
+  </head>
+  <body>
+    {% block content %}{% endblock %}
+
+  </body>
+</html>
