changed logo, created sperae css page for home page and linked that to home.html

--- a/code/django_webapp/home/templates/home/home.html
+++ b/code/django_webapp/home/templates/home/home.html
@@ -14,10 +14,10 @@
     {% endif %}
     <div class="banner">
         <div class="navbar">
-          <img src="../../static/images/TutorO Logo.png" class="logo">
+          <img src="../../static/images/TutorO_Logo.png" class="logo">
           <ul>
-              <li><a href="#">Contact us</a></li>
-              <li><a href="#">Sign in</a></li>
+              <li><a href="">Contact us</a></li>
+              <li><a href="">Sign in</a></li>
           </ul>
         </div>
 
