made minor changes

--- a/code/django_webapp/home/templates/home/home.html
+++ b/code/django_webapp/home/templates/home/home.html
@@ -25,8 +25,8 @@
           <h1> Welcome to TutorO</h1>
           <p> Are you a student or a Tutor? </p>
           <div>
-                <button type="button"><span></span>I'm a Student</button>
-                <button type="button"><span></span>I'm a Tutor</button>
+                <button type="button"><span></span><a href ="{% url 'student-register' %}">I'm a Student</a></button>
+                <button type="button"><span></span><a href ="{% url 'tutor-register' %}">I'm a Tutor</a></button>
           </div>
       </div>
     </div>
