--- a/code/django_webapp/home/templates/home/home.html
+++ b/code/django_webapp/home/templates/home/home.html
@@ -17,7 +17,7 @@
           <img src="../../static/images/TutorO_Logo.png" class="logo">
           <ul>
               <li><a href="">Contact us</a></li>
-              <li><a href="">Sign in</a></li>
+              <li><a href="{% url 'login' %}">Sign in</a></li>
           </ul>
         </div>
 
