--- a/code/django_webapp/dashboard/templates/dashboard/base.html
+++ b/code/django_webapp/dashboard/templates/dashboard/base.html
@@ -5,13 +5,31 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <link rel="stylesheet" href="{% static '/css/style.css'%}">
+    <link rel="stylesheet" href="{% static '/css/dash_style.css'%}">
 
     {% if title %}
       <title>TutorO - {{title}}</title>
     {% else %}
       <title>TutorO</title>
     {% endif %}
+
+    <nav>
+    	<input id="nav-toggle" type="checkbox">
+    	<img src="../../static/images/TutorO_Logo.png" class="logo">
+    	<ul class="links">
+    		<li><a href="#home">Home</a></li>
+    		<li><a href="#about">About</a></li>
+    		<li><a href="#work">Work</a></li>
+    		<li><a href="#projects">Projects</a></li>
+    		<li><a href="#contact">Contact</a></li>
+    	</ul>
+    	<label for="nav-toggle" class="icon-burger">
+    		<div class="line"></div>
+    		<div class="line"></div>
+    		<div class="line"></div>
+    	</label>
+    </nav>
+
   </head>
   <body>
     {% block content %}{% endblock %}
