--- a/code/django_webapp/dashboard/templates/dashboard/tutorDashboard.html
+++ b/code/django_webapp/dashboard/templates/dashboard/tutorDashboard.html
@@ -1,4 +1,4 @@
-{% extends "users/base.html" %}
+{% extends "dashboard/base.html" %}
 {% block content %}
 Write content here
 {% endblock content %}
