--- a/code/django_webapp/dashboard/templates/dashboard/base.html
+++ b/code/django_webapp/dashboard/templates/dashboard/base.html
@@ -5,6 +5,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static '/css/dash_style.css'%}">
 
     {% if title %}
@@ -15,13 +16,11 @@
 
     <nav>
     	<input id="nav-toggle" type="checkbox">
-    	<img src="../../static/images/TutorO_Logo.png" class="logo">
+      <a href="{% url 'home' %}"><img src="../../static/images/TutorO_Logo.png" class="logo"></a>
     	<ul class="links">
-    		<li><a href="#home">Home</a></li>
-    		<li><a href="#about">About</a></li>
-    		<li><a href="#work">Work</a></li>
-    		<li><a href="#projects">Projects</a></li>
-    		<li><a href="#contact">Contact</a></li>
+    		<li><a href="#projects">Subjects</a></li>
+    		<li><a href="{% url 'home' %}">Contact</a></li>
+        <a class="btn btn-primary" href="#"><i class="fa fa-user fa-fw"></i> User</a>
     	</ul>
     	<label for="nav-toggle" class="icon-burger">
     		<div class="line"></div>
