Fixed interests label in students.html

--- a/code/django_webapp/users/templates/users/student_register.html
+++ b/code/django_webapp/users/templates/users/student_register.html
@@ -10,6 +10,8 @@
               {{form.username}}
               <label>Email</label>
               {{form.email}}
+              <label>Interests</label>
+              {{form.interests}}
               <label>Password</label>
               {{form.password1}}
               <label>Re-enter password</label>
