--- a/code/django_webapp/users/templates/users/base.html
+++ b/code/django_webapp/users/templates/users/base.html
@@ -12,8 +12,20 @@
     {% else %}
       <title>TutorO</title>
     {% endif %}
+
+    <nav>
+    	<input id="nav-toggle" type="checkbox">
+      <a href="{% url 'home' %}"><img src="../../static/images/TutorO_Logo.png" class="logo"></a>
+    	<ul class="links">
+    		<li><a href="{% url 'contact-page' %}">Contact</a></li>
+    	</ul>
+    	<label for="nav-toggle" class="icon-burger">
+    		<div class="line"></div>
+    		<div class="line"></div>
+    		<div class="line"></div>
+    	</label>
+    </nav>
   </head>
-  <br><br>
   <body>
     {% block content %}{% endblock %}
 
