fixed extension links in students quiz templates

--- a/code/django_webapp/quiz/templates/quiz/students/quiz_list.html
+++ b/code/django_webapp/quiz/templates/quiz/students/quiz_list.html
@@ -1,7 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'quiz/base.html' %}
 
 {% block content %}
-  {% include 'classroom/students/_header.html' with active='new' %}
   <div class="card">
     <table class="table mb-0">
       <thead>
