Added padding to bottom of forms

--- a/code/django_webapp/static/css/style.css
+++ b/code/django_webapp/static/css/style.css
@@ -43,6 +43,7 @@ ul {
   flex-direction: column;
   padding: 0 50px;
   justify-content: center;
+  padding-bottom: 20px
 }
 
 .form-wrapper input {
