--- a/code/django_webapp/users/templates/users/login.html
+++ b/code/django_webapp/users/templates/users/login.html
@@ -12,10 +12,7 @@
           <button type="submit" name="Log in">Log in</button>
 
           <p>Don't have an account?</p>
-          <a href="{% url 'student-register' %}">Register as a student</a>
-          <br></br>
-          <a href="{% url 'tutor-register' %}">Register as a tutor</a>
-
+          <p><a href="{% url 'student-register' %}">Register as a student</a><br><br><a href="{% url 'tutor-register' %}">Register as a tutor</a></p>
         </form>
       </div>
 
