fixed links paths

--- a/code/django_webapp/dashboard/templates/dashboard/contact.html
+++ b/code/django_webapp/dashboard/templates/dashboard/contact.html
@@ -15,7 +15,7 @@
     {% endif %}
     <div class="banner-contact">
         <div class="navbar">
-          <a href="{% url 'home' %}"><img src="../../static/images/TutorO_Logo.png" class="logo"></a>
+          <a href="{% url 'welcome' %}"><img src="../../static/images/TutorO_Logo.png" class="logo"></a>
           <ul>
               <li><a href="{% url 'login' %}">Sign in</a></li>
           </ul>
