--- a/code/django_webapp/dashboard/templates/dashboard/welcome.html
+++ b/code/django_webapp/dashboard/templates/dashboard/welcome.html
@@ -16,7 +16,7 @@
         <div class="navbar">
           <img src="../../static/images/TutorO_Logo.png" class="logo">
           <ul>
-              <li><a href="{% url 'contact-page' %}">Contact us</a></li>
+              <li><a href="{% url 'contact' %}">Contact us</a></li>
               <li><a href="{% url 'login' %}">Sign in</a></li>
           </ul>
         </div>
