--- a/code/django_webapp/dashboard/templates/dashboard/students/home.html
+++ b/code/django_webapp/dashboard/templates/dashboard/students/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     {% for course in courses %}
-      <h2><a href="{% url 'students:course_detail' course.id %}">{{ course.name }}</a></h2>
+      <h2><a href="{% url 'student-dashboard:course_detail' course.id %}">{{ course.name }}</a></h2>
       {{ course.subject.get_html_badge }}
       {{ course.tutor }}
       <br></br>
