--- a/code/django_webapp/dashboard/templates/dashboard/tutors/course_add.html
+++ b/code/django_webapp/dashboard/templates/dashboard/tutors/course_add.html
@@ -9,7 +9,7 @@
       {% csrf_token %}
       {{ form|crispy }}
       <button type="submit" class="btn btn-success">Add Courses</button>
-      <a href="{% url 'tutor:home' %}" class="btn btn-outline-secondary" role="button">Nevermind</a>
+      <a href="{% url 'tutor-dashboard:home' %}" class="btn btn-outline-secondary" role="button">Nevermind</a>
     </form>
 
 {% endblock content %}
