--- a/code/django_webapp/dashboard/templates/dashboard/tutors/home.html
+++ b/code/django_webapp/dashboard/templates/dashboard/tutors/home.html
@@ -2,5 +2,5 @@
 
 {% block content %}
   <h1>Home</h1>
-  <button class="btn btn-success"><a href="{% url 'tutor:course_add' %}">Add Course</button>
+  <button class="btn btn-success"><a href="{% url 'tutor-dashboard:course_add' %}">Add Course</button>
 {% endblock %}
