--- a/code/django_webapp/static/css/style.css
+++ b/code/django_webapp/static/css/style.css
@@ -6,7 +6,7 @@ body {
 	flex-direction: column;
   font-family: 'Poppins', sans-serif;
   height: auto;
-  margin-top: 120px;
+  padding: 15px 0 10px 0;
 }
 
 h1 {
@@ -14,16 +14,28 @@ h1 {
   margin: 0;
 }
 
+ul{
+  decoration: none;
+  list-style: none;
+  font-size: 14px;
+  display: flex;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 40px;
+}
+
+li{
+  decoration: none;
+  list-style: none;
+  font-size: 14px;
+  padding: 10px 10px 10px 10px
+}
+
 a {
   color: gray;
   text-decoration: none;
   font-size: 14px;
   margin: 15px 0;
-}
-
-ul {
-  list-style: none;
-  decoration: none;
 }
 
 .wrapper {
