--- a/code/django_webapp/static/css/style.css
+++ b/code/django_webapp/static/css/style.css
@@ -5,8 +5,8 @@ body {
 	align-items: center;
 	flex-direction: column;
   font-family: 'Poppins', sans-serif;
-  height: auto;
-  padding: 15px 0 10px 0;
+  height: 100vh;
+  margin: -20px 0 50px;
 }
 
 h1 {
@@ -19,16 +19,14 @@ ul{
   list-style: none;
   font-size: 14px;
   display: flex;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 40px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 0;
+  margin: 0;
 }
 
-li{
-  decoration: none;
-  list-style: none;
-  font-size: 14px;
-  padding: 10px 10px 10px 10px
+li {
+  padding-right: 10px;
 }
 
 a {
@@ -44,9 +42,9 @@ a {
   box-shadow: 0 7px 50px #bdbdbd, 0 0 0 20px #ffffffeb;
   position: relative;
   overflow: hidden;
-  width: 70%;
+  width: 768px;
   max-width: 100%;
-  height: auto;
+  min-height: 480px;
 }
 
 .form-wrapper form {
@@ -54,8 +52,8 @@ a {
   display: flex;
   flex-direction: column;
   padding: 0 50px;
+  height: 100%;
   justify-content: center;
-  padding-bottom: 20px
 }
 
 .form-wrapper input {
@@ -82,8 +80,6 @@ button {
   font-size: 17px;
   color: #fff;
   background-color: #009688;
-  transition: 1.5s;
-  transform: scale(0.95);
 }
 
 button:hover{
@@ -95,7 +91,6 @@ button:hover{
   color: #fff;
   background-color: #000;
 }
-
 
 
 button:focus {
