--- a/code/django_webapp/dashboard/templates/dashboard/base.html
+++ b/code/django_webapp/dashboard/templates/dashboard/base.html
@@ -20,7 +20,7 @@
     	<ul class="links">
     		<li><a href="#home"><i class="fa fa-home fa-fw" aria-hidden="true"></i>Home</a></li>
     		<li><a href="#work">Work</a></li>
-    		<li><a href="#"><i class="fa fa-user-circle" aria-hidden="true"></i> {{user.first_name}}</a></li>.
+    		<li><a href="#"><i class="fa fa-user-circle" aria-hidden="true"></i> </a></li>
     	</ul>
     	<label for="nav-toggle" class="icon-burger">
     		<div class="line"></div>
