--- a/code/django_webapp/static/css/style.css
+++ b/code/django_webapp/static/css/style.css
@@ -56,7 +56,7 @@ a {
 	font-size: 24px;
 	color: #fff;
 }
-nav .links {
+.navbar .links {
 	float: right;
 	padding: 0;
 	margin: 0;
@@ -66,10 +66,10 @@ nav .links {
 	justify-content: space-around;
 	align-items: center;
 }
-nav .links li {
+.navbar .links li {
 	list-style: none;
 }
-nav .links a {
+.navbar .links a {
 	display: block;
 	padding: 1em;
 	font-size: 16px;
@@ -81,14 +81,14 @@ nav .links a {
 	position: absolute;
 	top: -100px;
 }
-nav .icon-burger {
+.navbarbar .icon-burger {
 	display: none;
 	position: absolute;
 	right: 5%;
 	top: 50%;
 	transform: translateY(-50%);
 }
-nav .icon-burger .line {
+.navbarba .icon-burger .line {
 	width: 30px;
 	height: 5px;
 	background-color: #fff;
@@ -97,12 +97,12 @@ nav .icon-burger .line {
 	transition: all .3s ease-in-out;
 }
 @media screen and (max-width: 768px) {
-	nav .logo {
+	.navbar .home-logo {
 		float: none;
 		width: auto;
 		justify-content: center;
 	}
-	nav .links {
+	.navbarbar .links {
 		float: none;
 		position: fixed;
 		z-index: 9;
@@ -119,27 +119,27 @@ nav .icon-burger .line {
 		box-sizing: border-box;
 		transition: all .5s ease-in-out;
 	}
-	nav .links a {
+	.navbar .links a {
 		font-size: 20px;
 	}
-	nav :checked ~ .links {
+	.navbar :checked ~ .links {
 		bottom: 0;
 	}
-	nav .icon-burger {
+	.navbar .icon-burger {
 		display: block;
 	}
-	nav :checked ~ .icon-burger .line:nth-child(1) {
+	.navbar :checked ~ .icon-burger .line:nth-child(1) {
 		transform: translateY(10px) rotate(225deg);
 	}
-	nav :checked ~ .icon-burger .line:nth-child(3) {
+	.navbar :checked ~ .icon-burger .line:nth-child(3) {
 		transform: translateY(-10px) rotate(-225deg);
 	}
-	nav :checked ~ .icon-burger .line:nth-child(2) {
+	.navbar :checked ~ .icon-burger .line:nth-child(2) {
 		opacity: 0;
 	}
 }
 
-nav .logo{
+.navbar .home-logo{
   width: auto;
   cursor: pointer;
   height: 35px;
