--- a/code/django_webapp/dashboard/templates/dashboard/base.html
+++ b/code/django_webapp/dashboard/templates/dashboard/base.html
@@ -27,7 +27,7 @@
     		<div class="line"></div>
     		<div class="line"></div>
     	</label>
-    </nav>
+    </div>
     <br><br><br><br><br>
 
     <div class="card mb-3">
