changed logo class name in html file

--- a/code/django_webapp/dashboard/templates/dashboard/base.html
+++ b/code/django_webapp/dashboard/templates/dashboard/base.html
@@ -14,9 +14,8 @@
     {% endif %}
   </head>
   <body>
-    <nav>
-    	<input id="nav-toggle" type="checkbox">
-    	<img src="../../static/images/TutorO_Logo.png" class="logo">
+    <div class="navbar">
+    	<img src="../../static/images/TutorO_Logo.png" class="home-logo">
     	<ul class="links">
     		<li><a href="#home"><i class="fa fa-home fa-fw" aria-hidden="true"></i>Home</a></li>
     		<li><a href="#work">Work</a></li>
