--- a/code/django_webapp/dashboard/templates/dashboard/students/course_detail.html
+++ b/code/django_webapp/dashboard/templates/dashboard/students/course_detail.html
@@ -1,7 +1,7 @@
 {% extends 'dashboard/base.html' %}
 
 {% block content %}
-  <div class="card" style="width: auto;">
+  <div class="card" style="border: none; width: auto;">
   <div class="card-body">
     <h5 class="card-title">{{ object.name }}</h5>
     <h6 class="card-subtitle mb-2 text-muted">{{ object.subject.get_html_badge }}</h6>
