--- a/code/django_webapp/static/css/style.css
+++ b/code/django_webapp/static/css/style.css
@@ -81,14 +81,14 @@ a {
 	position: absolute;
 	top: -100px;
 }
-.navbarbar .icon-burger {
+.navbar .icon-burger {
 	display: none;
 	position: absolute;
 	right: 5%;
 	top: 50%;
 	transform: translateY(-50%);
 }
-.navbarba .icon-burger .line {
+.navbar .icon-burger .line {
 	width: 30px;
 	height: 5px;
 	background-color: #fff;
@@ -102,7 +102,7 @@ a {
 		width: auto;
 		justify-content: center;
 	}
-	.navbarbar .links {
+	.navbar .links {
 		float: none;
 		position: fixed;
 		z-index: 9;
