--- a/code/django_webapp/dashboard/templates/dashboard/base.html
+++ b/code/django_webapp/dashboard/templates/dashboard/base.html
@@ -15,6 +15,7 @@
     {% endif %}
   </head>
   <body>
+    <div class="content-wrapper">
     <div class="navbar">
     	<img src="../../static/images/TutorO_Logo.png" class="home-logo">
     	<ul class="links">
@@ -40,9 +41,11 @@
           </button>
           {% endfor %}
         </div>
+      <br>
       {% block content %}
       {% endblock %}
       </div>
+    </div>
     </div>
   </body>
 </html>
