--- a/code/django_webapp/static/css/style.css
+++ b/code/django_webapp/static/css/style.css
@@ -9,9 +9,19 @@ body {
   margin: -20px 0 50px;
 }
 
+.content-wrapper{
+  margin-top: 0;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+	align-items: center;
+}
+
 h1 {
   font-weight: bold;
   margin: 0;
+  text-align: center;
+  padding: 5px;
 }
 
 ul{
