removed width from card styling and added button tag to <a> link

--- a/code/django_webapp/dashboard/templates/dashboard/students/home.html
+++ b/code/django_webapp/dashboard/templates/dashboard/students/home.html
@@ -2,12 +2,13 @@
 
 {% block content %}
     {% for course in courses %}
-      <div class="card" style="font-family: 'Poppins', sans-serif; margin: 0 30px 0 30px; border-radius: 20px; box-shadow: 5px 5px 15px LightGrey; width: 100vh; text-align: center;">
+    <h1>Grinds Courses</h1>
+      <div class="card" style="font-family: 'Poppins', sans-serif; margin: 0 30px 0 30px; border-radius: 20px; box-shadow: 5px 5px 15px LightGrey; text-align: center;">
         <div class="card-body">
           <h5 class="card-title">{{course.name}}</a></h5>
           <p class="card-text">{{ course.subject.get_html_badge }}</p>
           <h6 class="card-subtitle mb-2 text-muted">Taught by: &nbsp;&nbsp;<strong>{{ course.tutor }}</strong></h6>
-          <a href="{% url 'studentdash:course_detail' course.id %}">Go there!</a>
+          <button><a href="{% url 'studentdash:course_detail' course.id %}">Go there!</a></button>
         </div>
       </div>
       <br></br>
