--- a/code/django_webapp/static/css/style.css
+++ b/code/django_webapp/static/css/style.css
@@ -11,7 +11,8 @@ body {
 
 .content-wrapper{
   margin-top: 0;
-  width: 100%;
+  width: 98.82vw;
+  height: 100%;
   text-align: center;
   justify-content: center;
 	align-items: center;
@@ -54,7 +55,7 @@ a {
 	top: 0;
 	font-family: 'Poppins', sans-serif;
 	padding: 0 5%;
-	height: 100px;
+	height: 80px;
 	background-color: #009688;
 }
 .navbar .home-logo {
@@ -74,7 +75,7 @@ a {
 	float: right;
 	padding: 0;
 	margin: 0;
-	width: 60%;
+	width: 30%;
 	height: 100%;
 	display: flex;
 	justify-content: space-around;
