fixd content div positioning

--- a/code/django_webapp/dashboard/templates/dashboard/base.html
+++ b/code/django_webapp/dashboard/templates/dashboard/base.html
@@ -39,6 +39,7 @@
           {% endfor %}
         </div>
       <br>
+      <div class="content-wrapper">
       {% block content %}
       {% endblock %}
       </div>
