--- a/code/django_webapp/dashboard/templates/dashboard/base.html
+++ b/code/django_webapp/dashboard/templates/dashboard/base.html
@@ -16,8 +16,8 @@
   </head>
   <body>
     <div class="navbar">
-    	<a href="{% url 'studentdash:course_home' %}"><img src="../../static/images/TutorO_Logo.png" class="home-logo"></a>
-    	<ul class="links">
+    	<a href="{% url 'studentdash:course_home' %}"><img src="../../../static/images/TutorO_Logo.png" class="home-logo"></a>
+      <ul class="links">
     		<li><a href="#work">Work</a></li>
     		<li><a href="#"><i class="fa fa-user-circle" aria-hidden="true"></i> {{user.username}}</a></li>
     	</ul>
