Added new button stying and fixed form width

--- a/code/django_webapp/dashboard/templates/dashboard/tutors/home.html
+++ b/code/django_webapp/dashboard/templates/dashboard/tutors/home.html
@@ -2,5 +2,5 @@
 
 {% block content %}
   <h1>Home</h1>
-  <button class="btn btn-success"><a href="{% url 'tutordash:course_add' %}">Add Course</button>
+  <button class="btn btn-success" style="margin: 0 600px 0 600px; border-color: #009688; background-color: #009688;"><a href="{% url 'tutordash:course_add' %}">Add Course</button>
 {% endblock %}
