--- a/code/django_webapp/dashboard/templates/dashboard/tutors/course_add.html
+++ b/code/django_webapp/dashboard/templates/dashboard/tutors/course_add.html
@@ -5,7 +5,7 @@
 {% block content %}
     <h1 class="mb-3">Courses</h1>
     <br></br>
-    <form method="post" novalidate style="margin: 0 400px 0 400px; justify-content: center; align-items: center;">
+    <form method="post" novalidate style="margin: 0 400px 0 400px; position: relative; justify-content: center; align-items: center;">
       {% csrf_token %}
       {{ form|crispy }}
       <button class="btn btn-success" style="margin: 0 15px 0 15px; border-color: #009688; background-color: #009688;">Add Courses</button>
