--- a/code/django_webapp/dashboard/templates/dashboard/students/home.html
+++ b/code/django_webapp/dashboard/templates/dashboard/students/home.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Grinds Courses</h1>
     {% for course in courses %}
-      <div class="card" style="font-family: 'Poppins', sans-serif; margin: 0 30px 0 30px; border-radius: 20px; box-shadow: 5px 5px 15px LightGrey; text-align: center;">
+      <div class="card" style="font-family: 'Poppins', sans-serif; margin: 0 30px 0 30px; padding-left:30px; border-radius: 15px; box-shadow: 5px 5px 15px LightGrey;">
         <div class="card-body">
           <h5 class="card-title">{{course.name}}</a></h5>
           <p class="card-text">{{ course.subject.get_html_badge }}</p>
