--- a/code/django_webapp/users/templates/users/logout.html
+++ b/code/django_webapp/users/templates/users/logout.html
@@ -1,5 +1,5 @@
 {% extends 'users/base.html' %}
 {% block content %}
   <h2>You have been logged out</h2>
-  <p>Already have an account? <a href="{% url 'login' %}">Log in</a></p>
+  <p>Already have an account? <a href="{% url 'login' %}" style="color:gray;">Log in</a></p>
 {% endblock content %}
