--- a/code/django_webapp/dashboard/templates/dashboard/base.html
+++ b/code/django_webapp/dashboard/templates/dashboard/base.html
@@ -15,36 +15,38 @@
     {% endif %}
   </head>
   <body>
-    {% user.is_student as user_state %}
-    {% if user_state == true}
-    <div class="navbar">
-    	<a href="{% url 'studentdash:course_home' %}"><img src="../../../static/images/TutorO_Logo.png" class="home-logo"></a>
-      <ul class="links">
-        <li><a href="{% url 'studentdash:course_home' %}">Courses</a></li>
-    		<li><a href="{% url 'students:quiz_list' %}">Quizes</a></li>
-        <li><a href="" style="cursor: default; padding: 0; margin: 0 0 0 20px; text-align:center; "><small>Logged in as {{user.username}}</small></a></li>
-        <li><a href="" style="cursor: default; margin:0; padding: 0;"><small>|</small></a></li>
-    		<li><a href="{% url 'logout' %}" style="padding: 0; margin: 0;"><small>logout</small></a></li>
-    	</ul>
-    	<label for="nav-toggle" class="icon-burger">
-    		<div class="line"></div>
-    		<div class="line"></div>
-    		<div class="line"></div>
-    	</label>
-    </div>
+    {% if user.is_student == True %}
+      <div class="navbar">
+      	<a href="{% url 'studentdash:course_home' %}"><img src="../../../static/images/TutorO_Logo.png" class="home-logo"></a>
+        <ul class="links">
+          <li><a href="{% url 'studentdash:course_home' %}">Courses</a></li>
+      		<li><a href="{% url 'students:quiz_list' %}">Quizzes</a></li>
+          <li><a href="" style="cursor: default; padding: 0; margin: 0 0 0 20px; text-align:center; "><small>Logged in as {{user.first_name}}</small></a></li>
+          <li><a href="" style="cursor: default; margin:0; padding: 0;"><small>|</small></a></li>
+      		<li><a href="{% url 'logout' %}" style="padding: 0; margin: 0;"><small>logout</small></a></li>
+      	</ul>
+      	<label for="nav-toggle" class="icon-burger">
+      		<div class="line"></div>
+      		<div class="line"></div>
+      		<div class="line"></div>
+      	</label>
+      </div>
     {% else %}
-    <div class="navbar">
-    	<a href="{% url 'studentdash:course_detail' %}"><img src="../../../static/images/TutorO_Logo.png" class="home-logo"></a>
-      <ul class="links">
-    		<li><a href="#work">Work</a></li>
-    		<li><a href="#"><i class="fa fa-user-circle" aria-hidden="true"></i> {{user.username}}</a></li>
-    	</ul>
-    	<label for="nav-toggle" class="icon-burger">
-    		<div class="line"></div>
-    		<div class="line"></div>
-    		<div class="line"></div>
-    	</label>
-    </div>
+      <div class="navbar">
+      	<a href="{% url 'tutordash:home' %}"><img src="../../../static/images/TutorO_Logo.png" class="home-logo"></a>
+        <ul class="links">
+          <li><a href="{% url 'tutordash:home' %}">Courses</a></li>
+      		<li><a href="{% url 'tutor:quiz_change_list' %}">Quizzes</a></li>
+          <li><a href="" style="cursor: default; padding: 0; margin: 0 0 0 20px; text-align:center; "><small>Logged in as {{user.first_name}}</small></a></li>
+          <li><a href="" style="cursor: default; margin:0; padding: 0;"><small>|</small></a></li>
+      		<li><a href="{% url 'logout' %}" style="padding: 0; margin: 0;"><small>logout</small></a></li>
+      	</ul>
+      	<label for="nav-toggle" class="icon-burger">
+      		<div class="line"></div>
+      		<div class="line"></div>
+      		<div class="line"></div>
+      	</label>
+      </div>
     {% endif %}
 <div class="content-wrapper" style="margin-top:100px">
     <div class="card mb-3">
