--- a/code/django_webapp/dashboard/templates/dashboard/base.html
+++ b/code/django_webapp/dashboard/templates/dashboard/base.html
@@ -49,7 +49,7 @@
       </div>
     {% endif %}
 <div class="content-wrapper" style="margin-top:100px">
-    <div class="card mb-3">
+    <div class="card mb-3" style="margin-top:50px">
       <div class="card-body">
         {% for message in messages %}
         <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
